<resources>
    <string name="app_name">Camping</string>
    <string name="facebook_app_id">179352260623510</string>
    <string name="fb_login_protocol_scheme">fb179352260623510</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Register-->
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="register">Register</string>
    <string name="sendEmail">Send Email</string>
    <string name="please_wait">Please waiting...</string>
    <string name="posting">Posting...</string>
    <string name="forget_password">Forget Password?</string>
    <string name="register_username">Username</string>
    <string name="register_user_email">Email</string>
    <string name="register_user_password">Password</string>
    <string name="register_already_account">Already have an account? Log In</string>
    <string name="no_account">Do not have an account? Sign up</string>
    <string name="all_fields_are_required">All fields are required!</string>
    <string name="password_must_have_8_characters">Password must have 8 characters</string>
    <string name="you_can_not_register_with_this_email_or_password">You cannot register with this email or password</string>
    <string name="authentication_failed">Authentication failed</string>
    <!-- Reset Password -->
    <string name="please_enter_your_email_address">Please enter your email address</string>
    <string name="please_visit_your_email_to_reset_your_password">Please visit your email to reset your password</string>
    <string name="reset_password_error">Error</string>
    <!-- Explore -->
    <string name="search_campsite">Search campsite...</string>
    <string name="campsite_name">Campsite Name</string>
    <string name="campsite_phone">Campsite Phone</string>
    <string name="campsite_address">Campsite Address</string>
    <!-- Post -->
    <string name="please_enter_the_title">Please enter the title</string>
    <string name="please_enter_the_description">Please enter the description, must upload one photo</string>
    <string name="something_gone_wrong">Something gone wrong!!!</string>
    <string name="failed">Failed</string>
    <string name="no_image_selected">No image selected!!!</string>
    <string name="must_upload_one_photo">Must upload one photo</string>
    <string name="alert_error">Alert</string>
    <string name="location">Location :</string>
    <string name="camping">Camping</string>
    <string name="fishing">Fishing</string>
    <string name="hiking">Hiking</string>
    <!-- Spinner -->
    <string-array name="spinner_sub">
        <item>Choose Sub</item>
        <item>VIC</item>
        <item>NSW</item>
        <item>QLD</item>
        <item>ATC</item>
        <item>TAS</item>
        <item>NT</item>
        <item>SA</item>
        <item>WA</item>
    </string-array>
    <!-- Comment -->
    <string name="add_comments">Add a comment...</string>
    <string name="empty_comments">You cannot send empty comment.</string>
    <string name="view_all">View all </string>
    <string name="comments"> comments</string>
    <string name="like">like</string>
    <string name="liked">like</string>
    <string name="more">...more</string>
    <!-- Profile -->
    <string name="posts">posts</string>
    <string name="follow">Follow</string>
    <string name="follows">follows</string>
    <string name="following">following</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="change_photo">Change Photo</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="personal_info">Personal Information</string>
    <string name="upload">Uploading...</string>
    <string name="upload_failed">Failed</string>
    <string name="no_image_select">No image selected</string>
    <string name="send_message">Message</string>
    <string name="no_fans">You do not have any followers. \n Hurry go to meeting new friends.</string>
    <string name="logout">Logout</string>
    <!-- CameSite Explore -->
    <string name="campSite_name">CampSite Name</string>
    <string name="campSite_sub">Tas</string>
    <string name="campSite_address">CampSite Address</string>
    <string name="campsite_follow">Follow</string>
    <!-- CampSitePost -->
    <string name="campsite_post">Post</string>
    <string name="campsite_description">Say some description</string>
    <string name="campsite_post_address">Campsite Address</string>
    <string name="campsite_kitchen">Kitchen</string>
    <string name="campsite_bbq">Barbecue</string>
    <string name="campsite_suit_any_car">Suitable for any vehicle type</string>
    <string name="campsite_laundromat">Laundromat</string>
    <string name="campsite_dump_station">Dump Station</string>
    <string name="campsite_large_vehicle_access">Large Vehicle Access</string>
    <string name="campsite_caravan_power">Caravan Power</string>
    <string name="campsite_hot_shower">Hot Shower</string>
    <string name="campsite_water_from_tap">Water From Tap</string>
    <string name="campsite_cellular_signal">Cellular Signal</string>
    <string name="campsite_cabin">Cabin</string>
    <string name="campsite_wifi">Wifi</string>
    <string name="campsite_wheelchair">Wheelchair Accessible</string>
    <string name="campsite_pet_welcome">Pet Welcome by arrangement</string>
    <string name="campsite_household_power">Household Power</string>
    <string name="campsite_surface">Surface</string>
    <string name="campsite_credit_card">Credit Card Accepted</string>
    <string name="campsite_bed_supplied">Bedding Supplied</string>
    <string name="campsite_toilet">Toilet</string>
    <string name="campsite_internet">Internet</string>
    <string name="campsite_swimming_pool">Swimming Pool</string>
    <string name="campsite_info">Camping Information</string>
    <string name="campsite_offers">What this place offers</string>
    <string name="campsite_description1">Description</string>
    <!-- Sub Array -->
    <string name="choose_sub">Choose Sub</string>
    <string name="vic">VIC</string>
    <string name="nsw">NSW</string>
    <string name="qld">QLD</string>
    <string name="act">ACT</string>
    <string name="tas">TAS</string>
    <string name="nt">NT</string>
    <string name="sa">SA</string>
    <string name="wa">WA</string>
    <!-- Rating -->
    <string name="please_write_something">Please write something</string>
    <string name="rating_campsite">Rating Campsite</string>
    <string name="please_fill_information">Please fill information</string>
    <string name="rating_cancel">Cancel</string>
    <string name="rating_ok">ok</string>
    <!-- Google API Key-->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAF2FpEl2tYHABFuUFKa5XDa5c2Q_1yj0k</string>
    <!-- Notification -->
    <string name="notification">Notification</string>
    <string name="no_notification">You currently have no notification! \n Hurry up to meet friends to chat!</string>
    <string name="no_message">You currently have no message! \n Hurry up to meet friends to chat!</string>
    <string name="b_message">Message</string>
    <string name="b_notification">Notification</string>
    <!-- HomePost -->
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="edit_post">Edit Post</string>
    <string name="delete_post">Delete Post</string>
    <string name="delete_post_complete">Delete!!!</string>
    <string name="do_you_want_to_delete">Do you want to delete?</string>
    <string name="do_you_sure_want_to_delete_this_article">Do you sure want to delete this article?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="report_post">Report Post</string>
    <!-- Chat -->
    <string name="you_cannot_send_empty_message">You cannot send empty message.</string>
</resources>
