<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.CampSitePostFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/windowBackground"
                android:id="@+id/toolbar">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_back_black_24dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textSize="22sp"
                        android:maxLines="1"
                        android:textStyle="bold"
                        android:text="@string/app_name"
                        android:fontFamily="@font/mightype"
                        android:textColor="@color/navy_blue"
                        android:id="@+id/username"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/campsite_post"
                        android:src="@drawable/ic_send_black_24dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="10dp"/>

                </RelativeLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/upload_banner"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_photo_camera_black_24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"/>
<!--            <ImageView-->
<!--                android:scaleType="centerCrop"-->
<!--                android:id="@+id/campsite_image"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="200dp"-->
<!--                android:src="@drawable/campsite_default"/>-->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCampsiteImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/upload_banner" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/location"-->
<!--                android:textStyle="bold"-->
<!--                android:textSize="20dp"-->
<!--                android:layout_margin="20dp"/>-->

            <Spinner
                android:id="@+id/spinner_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:entries="@array/spinner_sub"
                android:spinnerMode="dialog"
                android:layout_gravity="center"/>

        </LinearLayout>

        <EditText
            android:id="@+id/campsite_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:hint="@string/campsite_name"
            android:background="@null"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:padding="8dp"/>

<!--        <EditText-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="@null"-->
<!--            android:drawableLeft="@drawable/ic_location_on_black_24dp"-->
<!--            android:id="@+id/campsite_address"-->
<!--            android:hint="@string/campsite_post_address"-->
<!--            android:padding="8dp"/>-->

        <fragment
            android:id="@+id/places_autocomplete_fragment"
            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:padding="8dp"
            android:id="@+id/campsite_address"
            android:text="Campsite Address"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:visibility="gone"
            android:id="@+id/place_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:visibility="gone"
            android:id="@+id/place_latlng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/campsite_info"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:hint="@string/campsite_info"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:padding="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/campsite_offers"
            android:padding="8dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>

        <com.google.android.material.chip.ChipGroup
            android:padding="8dp"
            android:id="@+id/CampSite"
            android:theme="@style/CampsitePost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleSelection="false">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/kitchen"
                app:chipIconVisible="true"
                app:iconStartPadding="8dp"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/campsite_kitchen"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/barbecue"
                app:iconStartPadding="8dp"
                app:chipIconVisible="true"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/campsite_bbq"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/suit_any_car"
                app:iconStartPadding="8dp"
                app:chipIconVisible="true"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/campsite_suit_any_car"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/laundromat"
                app:iconStartPadding="8dp"
                app:chipIconVisible="true"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/campsite_laundromat"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/dump_station"
                app:iconStartPadding="8dp"
                app:chipIconVisible="true"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/campsite_dump_station"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/large_vehicle_access"
                app:iconStartPadding="8dp"
                app:chipIconVisible="true"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/campsite_large_vehicle_access"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/caravan_power"
                app:iconStartPadding="8dp"
                app:chipIconVisible="true"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/campsite_caravan_power"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/hot_shower"
                app:iconStartPadding="8dp"
                app:chipIconVisible="true"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/campsite_hot_shower"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/water_from_tap"
                app:iconStartPadding="8dp"
                app:chipIconVisible="true"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/campsite_water_from_tap"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/cellular_signal"
                app:iconStartPadding="8dp"
                app:chipIconVisible="true"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/campsite_cellular_signal"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/cabin"
                app:iconStartPadding="8dp"
                app:chipIconVisible="true"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/campsite_cabin"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/wifi"
                app:iconStartPadding="8dp"
                app:chipIconVisible="true"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/campsite_wifi"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/wheelchair_accessible"
                app:iconStartPadding="8dp"
                app:chipIconVisible="true"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/campsite_wheelchair"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/pet_welcome"
                app:iconStartPadding="8dp"
                app:chipIconVisible="true"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/campsite_pet_welcome"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/househole_power"
                app:iconStartPadding="8dp"
                app:chipIconVisible="true"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/campsite_household_power"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/surface"
                app:iconStartPadding="8dp"
                app:chipIconVisible="true"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/campsite_surface"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/credit_card"
                app:iconStartPadding="8dp"
                app:chipIconVisible="true"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/campsite_credit_card"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/bed_supplied"
                app:iconStartPadding="8dp"
                app:chipIconVisible="true"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/campsite_bed_supplied"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/toilet"
                app:iconStartPadding="8dp"
                app:chipIconVisible="true"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/campsite_toilet"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/internet"
                app:iconStartPadding="8dp"
                app:chipIconVisible="true"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/campsite_internet"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/chip21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/swimming_pool"
                app:iconStartPadding="8dp"
                app:chipIconVisible="true"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/campsite_swimming_pool"/>
        </com.google.android.material.chip.ChipGroup>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/campsite_description"
            android:padding="8dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/campsite_description"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:hint="@string/campsite_description1"
            android:gravity="start"
            android:background="@null"
            android:padding="8dp"/>

    </LinearLayout>


</ScrollView>