<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.EditProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:fontFamily="@font/deathstar"
            app:titleTextColor="#007FFF"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/Theme.AppCompat.Light.DarkActionBar"
            android:theme="@style/ToolbarTheme"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:title="@string/app_name">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/close"
                    android:src="@drawable/ic_close_black_24dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_profile"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="#6495ED"
                    android:layout_toEndOf="@+id/close"/>

                <TextView
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:textSize="18sp"/>

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/default_user"
            android:layout_gravity="center"
            android:id="@+id/image_profile"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_photo"
            android:layout_gravity="center"
            android:id="@+id/tv_change"
            android:textSize="16sp"
            android:textColor="@color/navy_blue"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fullname"
            android:hint="@string/fullname"
            android:layout_marginTop="20dp"
            app:met_floatingLabel="normal"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_marginTop="20dp"
            app:met_floatingLabel="normal"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bio"
            android:hint="@string/personal_info"
            android:layout_marginTop="20dp"
            app:met_floatingLabel="normal"/>

        <Button
            android:id="@+id/btn_logout"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:background="@drawable/button_background"/>

    </LinearLayout>

</LinearLayout>