<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/camping_background"
    android:padding="20dp"
    tools:context=".Ui.ResetPasswordActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:fontFamily="@font/deathstar"/>

    <EditText
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:hint="@string/register_user_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="15dp"
        android:padding="10dp"/>

    <Button
        android:id="@+id/btn_sendEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendEmail"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:layout_marginTop="15dp" />

</LinearLayout>